--- a/.editorconfig
+++ b/.editorconfig
@@ -1,8 +1,13 @@
-# http://EditorConfig.org
-
-# top-most EditorConfig file
+# Editor configuration, see http://editorconfig.org
 root = true
 
-[*.{html,ts,js,json,css,less}]
+[*]
+charset = utf-8
 indent_style = space
 indent_size = 2
+insert_final_newline = true
+trim_trailing_whitespace = true
+
+[*.md]
+max_line_length = off
+trim_trailing_whitespace = false
