--- a/package.json
+++ b/package.json
@@ -1,197 +1,51 @@
 {
-  "name": "@hawtio/online",
-  "version": "3.0.0",
-  "main": "dist/hawtio-online.js",
-  "types": "dist/hawtio-online.d.ts",
-  "files": [
-    "dist"
-  ],
+  "name": "hawtio-online",
+  "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
-    "start": "gulp",
-    "build": "gulp build"
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build --prod",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
+  "private": true,
   "dependencies": {
-    "@hawtio/integration": "^3.2.4",
-    "angular-resource": "~1.6.5",
-    "hawtio-kubernetes-api": "hawtio/hawtio-kubernetes-api#2.0.53",
-    "hawtio-oauth": "hawtio/hawtio-oauth#2.0.51",
-    "jsonpath": "https://github.com/dchester/jsonpath.git#0.2.9",
-    "kubernetes-label-selector": "kubernetes-ui/label-selector#1.4.2",
-    "ng-idle": "~1.3.2"
+    "@angular/animations": "^5.1.0",
+    "@angular/common": "^5.1.0",
+    "@angular/compiler": "^5.1.0",
+    "@angular/core": "^5.1.0",
+    "@angular/forms": "^5.1.0",
+    "@angular/http": "^5.1.0",
+    "@angular/platform-browser": "^5.1.0",
+    "@angular/platform-browser-dynamic": "^5.1.0",
+    "@angular/router": "^5.1.0",
+    "core-js": "^2.4.1",
+    "jsonpath": "^1.0.0",
+    "patternfly-ng": "^2.1.1",
+    "rxjs": "^5.5.6",
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@hawtio/node-backend": "^3.0.0",
-    "del": "^2.0.0",
-    "event-stream": "^3.0.0",
-    "gulp": "^3.0.0",
-    "gulp-angular-templatecache": "^2.0.0",
-    "gulp-chmod": "^2.0.0",
-    "gulp-concat": "^2.0.0",
-    "gulp-concat-filenames": "^1.0.0",
-    "gulp-connect": "^2.0.0",
-    "gulp-debug": "^3.0.0",
-    "gulp-dedupe": "0.0.2",
-    "gulp-filter": "^4.0.0",
-    "gulp-flatten": "~0.3.0",
-    "gulp-foreach": "~0.1.0",
-    "gulp-less": "^3.0.0",
-    "gulp-load-plugins": "^1.0.0",
-    "gulp-minify-css": "^1.0.0",
-    "gulp-ng-annotate": "^2.0.0",
-    "gulp-notify": "^2.0.0",
-    "gulp-rename": "^1.0.0",
-    "gulp-replace": "~0.5.0",
-    "gulp-rev": "^7.0.0",
-    "gulp-typescript": "^3.0.0",
-    "gulp-uglify": "^2.0.0",
-    "gulp-usemin": "~0.3.0",
-    "gulp-watch": "^3.0.0",
-    "js-logger": "^0.9.14",
-    "proxy-middleware": "~0.15.0",
-    "run-sequence": "^1.2.2",
-    "stringify-object": "^2.0.0",
-    "typescript": "^2.0.0",
-    "underscore.string": "^3.0.0",
-    "urijs": "^1.17.0",
-    "url-join": "1.0.0",
-    "yargs": "^6.0.0"
-  },
-  "license": "Apache-2.0",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:hawtio/hawtio-online.git"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "flat": true,
-  "resolutions": {
-    "event-stream": "3.3.4",
-    "gulp-concat": "2.6.1",
-    "js-logger": "1.4.1",
-    "stringify-object": "3.2.1",
-    "urijs": "1.19.0",
-    "yargs": "6.6.0",
-    "angular": "1.6.7",
-    "angular-sanitize": "1.6.7",
-    "jquery": "2.2.4",
-    "lodash": "4.17.4",
-    "patternfly": "3.31.1",
-    "moment": "2.19.4",
-    "angular-ui-bootstrap": "2.5.6",
-    "commander": "2.12.2",
-    "lru-cache": "3.2.0",
-    "semver": "5.4.1",
-    "minimist": "1.2.0",
-    "esprima": "3.0.0",
-    "underscore": "1.7.0",
-    "escodegen": "0.0.28",
-    "estraverse": "1.3.2",
-    "source-map": "0.6.1",
-    "colors": "1.0.3",
-    "body-parser": "1.18.2",
-    "connect-livereload": "0.6.0",
-    "request": "2.83.0",
-    "tiny-lr": "1.0.5",
-    "bytes": "3.0.0",
-    "debug": "2.6.9",
-    "depd": "1.1.1",
-    "http-errors": "1.6.2",
-    "iconv-lite": "0.4.19",
-    "qs": "6.5.1",
-    "raw-body": "2.3.2",
-    "ms": "2.0.0",
-    "inherits": "2.0.3",
-    "setprototypeof": "1.1.0",
-    "statuses": "1.4.0",
-    "mime-db": "1.32.0",
-    "accepts": "1.3.4",
-    "cookie": "0.3.1",
-    "escape-html": "1.0.3",
-    "etag": "1.8.1",
-    "finalhandler": "1.1.0",
-    "fresh": "0.5.2",
-    "range-parser": "1.2.0",
-    "safe-buffer": "5.1.1",
-    "send": "0.16.1",
-    "serve-static": "1.13.1",
-    "utils-merge": "1.0.1",
-    "vary": "1.1.2",
-    "negotiator": "0.6.1",
-    "mime": "1.6.0",
-    "aws-sign2": "0.7.0",
-    "form-data": "2.3.1",
-    "har-validator": "5.0.3",
-    "hawk": "6.0.2",
-    "http-signature": "1.2.0",
-    "performance-now": "2.1.0",
-    "ajv": "5.5.1",
-    "har-schema": "2.0.0",
-    "boom": "5.2.0",
-    "cryptiles": "3.1.2",
-    "hoek": "4.2.0",
-    "sntp": "2.1.0",
-    "assert-plus": "1.0.0",
-    "extsprintf": "1.4.0",
-    "object-assign": "4.1.1",
-    "xtend": "4.0.1",
-    "string_decoder": "0.10.31",
-    "glob": "7.1.2",
-    "minimatch": "3.0.4",
-    "once": "1.4.0",
-    "chalk": "2.3.0",
-    "gulp-util": "3.0.7",
-    "vinyl-fs": "0.3.14",
-    "ansi-styles": "3.2.0",
-    "has-ansi": "2.0.0",
-    "strip-ansi": "3.0.1",
-    "supports-color": "4.5.0",
-    "ansi-regex": "2.1.1",
-    "dateformat": "2.2.0",
-    "lodash._reinterpolate": "3.0.0",
-    "lodash.template": "3.6.2",
-    "replace-ext": "1.0.0",
-    "through2": "2.0.3",
-    "vinyl": "2.1.0",
-    "lodash.escape": "3.2.0",
-    "lodash.keys": "3.1.2",
-    "lodash.templatesettings": "3.1.1",
-    "readable-stream": "2.3.3",
-    "isarray": "1.0.0",
-    "clone": "2.1.1",
-    "clone-stats": "1.0.0",
-    "is-glob": "3.1.0",
-    "is-extglob": "2.1.1",
-    "kind-of": "4.0.0",
-    "is-number": "3.0.0",
-    "isobject": "3.0.1",
-    "for-own": "1.0.0",
-    "glob-parent": "3.1.0",
-    "expand-tilde": "2.0.2",
-    "end-of-stream": "1.4.0",
-    "glob-stream": "5.3.5",
-    "graceful-fs": "3.0.11",
-    "strip-bom": "2.0.0",
-    "ordered-read-streams": "0.3.0",
-    "unique-stream": "2.2.1",
-    "camelcase": "3.0.0",
-    "uid-safe": "2.1.4",
-    "lodash.defaults": "4.2.0",
-    "convert-source-map": "1.5.1",
-    "cliui": "3.2.0",
-    "wordwrap": "0.0.3",
-    "bufferstreams": "1.1.3",
-    "vinyl-file": "1.3.0",
-    "datatables.net": "1.10.16",
-    "@hawtio/ui": "3.2.0",
-    "@hawtio/utilities": "3.2.0",
-    "@hawtio/core-dts": "3.0.18",
-    "@types/lodash": "4.14.91",
-    "@types/marked": "0.3.0",
-    "angular-route": "1.6.8",
-    "marked": "0.3.9",
-    "codemirror": "5.33.0",
-    "js-beautify": "1.7.5",
-    "@hawtio/core": "3.2.4"
+    "@angular/cli": "1.6.4",
+    "@angular/compiler-cli": "^5.1.0",
+    "@angular/language-service": "^5.1.0",
+    "@types/jasmine": "~2.8.3",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/node": "~6.0.60",
+    "codelyzer": "^4.0.1",
+    "jasmine-core": "~2.8.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~2.0.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.1.2",
+    "ts-node": "~3.2.0",
+    "tslint": "~5.9.1",
+    "typescript": "~2.5.3"
   }
 }
