--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@angular/platform-browser": "^5.1.0",
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
+    "@types/urijs": "^1.15.34",
     "core-js": "^2.4.1",
     "jsonpath": "^1.0.0",
     "patternfly-ng": "^2.1.1",
     "rxjs": "^5.5.6",
+    "urijs": "^1.19.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
