partially converted hawtio-kubernetes-api to Angular 5

--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser": "^5.1.0",
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
+    "@types/lodash": "^4.14.95",
     "@types/urijs": "^1.15.34",
     "core-js": "^2.4.1",
     "jsonpath": "^1.0.0",
+    "lodash": "^4.17.4",
     "patternfly-ng": "^2.1.1",
     "rxjs": "^5.5.6",
     "urijs": "^1.19.0",
